parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    RETURN

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     statement -> NAME EQUALS expression
Rule 5     statement -> PRINT LPAREN expression RPAREN
Rule 6     statement -> PRINTSTR LPAREN strings RPAREN
Rule 7     statement -> IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 8     statement -> WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 9     statement -> FOR LPAREN NAME EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE
Rule 10    statement -> FUNC NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
Rule 11    statement -> FUNC NAME LPAREN param RPAREN LACCOLADE bloc RACCOLADE
Rule 12    statement -> NAME LPAREN RPAREN
Rule 13    statement -> NAME LPAREN expression RPAREN
Rule 14    expression -> expression PLUS expression
Rule 15    expression -> expression MINUS expression
Rule 16    expression -> expression TIMES expression
Rule 17    expression -> expression DIVIDE expression
Rule 18    expression -> expression INF expression
Rule 19    expression -> expression SUP expression
Rule 20    expression -> expression INFEQUAL expression
Rule 21    expression -> expression SUPEQUAL expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression BOOLEQUAL expression
Rule 25    expression -> MINUS expression
Rule 26    expression -> expression COMA expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NUMBER
Rule 29    expression -> NAME
Rule 30    param -> NAME COMA param
Rule 31    param -> NAME EQUALS expression COMA param
Rule 32    param -> NAME EQUALS expression
Rule 33    param -> NAME
Rule 34    strings -> NAME strings
Rule 35    strings -> NAME

Terminals, with rules where they appear

AND                  : 22
BOOLEQUAL            : 24
COMA                 : 26 30 31
DIVIDE               : 17
ELSE                 : 
EQUALS               : 4 9 9 31 32
FOR                  : 9
FUNC                 : 10 11
IF                   : 7
INF                  : 18
INFEQUAL             : 20
LACCOLADE            : 7 8 9 10 11
LPAREN               : 5 6 7 8 9 10 11 12 13 27
MINUS                : 15 25
NAME                 : 4 9 9 10 11 12 13 29 30 31 32 33 34 35
NUMBER               : 28
OR                   : 23
PLUS                 : 14
PRINT                : 5
PRINTSTR             : 6
RACCOLADE            : 7 8 9 10 11
RETURN               : 
RPAREN               : 5 6 7 8 9 10 11 12 13 27
SEMI                 : 2 3 9 9
SUP                  : 19
SUPEQUAL             : 21
TIMES                : 16
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 7 8 9 10 11
expression           : 4 5 7 8 9 9 9 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 26 27 31 32
param                : 11 30 31
start                : 0
statement            : 2 3
strings              : 6 34

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (6) statement -> . PRINTSTR LPAREN strings RPAREN
    (7) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (8) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (9) statement -> . FOR LPAREN NAME EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE
    (10) statement -> . FUNC NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (11) statement -> . FUNC NAME LPAREN param RPAREN LACCOLADE bloc RACCOLADE
    (12) statement -> . NAME LPAREN RPAREN
    (13) statement -> . NAME LPAREN expression RPAREN

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    PRINTSTR        shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    FUNC            shift and go to state 10

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (6) statement -> . PRINTSTR LPAREN strings RPAREN
    (7) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (8) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (9) statement -> . FOR LPAREN NAME EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE
    (10) statement -> . FUNC NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (11) statement -> . FUNC NAME LPAREN param RPAREN LACCOLADE bloc RACCOLADE
    (12) statement -> . NAME LPAREN RPAREN
    (13) statement -> . NAME LPAREN expression RPAREN

    $end            reduce using rule 1 (start -> bloc .)
    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    PRINTSTR        shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    FUNC            shift and go to state 10

    statement                      shift and go to state 11

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 12


state 4

    (4) statement -> NAME . EQUALS expression
    (12) statement -> NAME . LPAREN RPAREN
    (13) statement -> NAME . LPAREN expression RPAREN

    EQUALS          shift and go to state 13
    LPAREN          shift and go to state 14


state 5

    (5) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 15


state 6

    (6) statement -> PRINTSTR . LPAREN strings RPAREN

    LPAREN          shift and go to state 16


state 7

    (7) statement -> IF . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 17


state 8

    (8) statement -> WHILE . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 18


state 9

    (9) statement -> FOR . LPAREN NAME EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 19


state 10

    (10) statement -> FUNC . NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (11) statement -> FUNC . NAME LPAREN param RPAREN LACCOLADE bloc RACCOLADE

    NAME            shift and go to state 20


state 11

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 21


state 12

    (3) bloc -> statement SEMI .

    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    PRINTSTR        reduce using rule 3 (bloc -> statement SEMI .)
    IF              reduce using rule 3 (bloc -> statement SEMI .)
    WHILE           reduce using rule 3 (bloc -> statement SEMI .)
    FOR             reduce using rule 3 (bloc -> statement SEMI .)
    FUNC            reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACCOLADE       reduce using rule 3 (bloc -> statement SEMI .)


state 13

    (4) statement -> NAME EQUALS . expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 23

state 14

    (12) statement -> NAME LPAREN . RPAREN
    (13) statement -> NAME LPAREN . expression RPAREN
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    RPAREN          shift and go to state 27
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 28

state 15

    (5) statement -> PRINT LPAREN . expression RPAREN
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 29

state 16

    (6) statement -> PRINTSTR LPAREN . strings RPAREN
    (34) strings -> . NAME strings
    (35) strings -> . NAME

    NAME            shift and go to state 31

    strings                        shift and go to state 30

state 17

    (7) statement -> IF LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 32

state 18

    (8) statement -> WHILE LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 33

state 19

    (9) statement -> FOR LPAREN . NAME EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE

    NAME            shift and go to state 34


state 20

    (10) statement -> FUNC NAME . LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (11) statement -> FUNC NAME . LPAREN param RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 35


state 21

    (2) bloc -> bloc statement SEMI .

    NAME            reduce using rule 2 (bloc -> bloc statement SEMI .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMI .)
    PRINTSTR        reduce using rule 2 (bloc -> bloc statement SEMI .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMI .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMI .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMI .)
    FUNC            reduce using rule 2 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMI .)
    RACCOLADE       reduce using rule 2 (bloc -> bloc statement SEMI .)


state 22

    (29) expression -> NAME .

    PLUS            reduce using rule 29 (expression -> NAME .)
    MINUS           reduce using rule 29 (expression -> NAME .)
    TIMES           reduce using rule 29 (expression -> NAME .)
    DIVIDE          reduce using rule 29 (expression -> NAME .)
    INF             reduce using rule 29 (expression -> NAME .)
    SUP             reduce using rule 29 (expression -> NAME .)
    INFEQUAL        reduce using rule 29 (expression -> NAME .)
    SUPEQUAL        reduce using rule 29 (expression -> NAME .)
    AND             reduce using rule 29 (expression -> NAME .)
    OR              reduce using rule 29 (expression -> NAME .)
    BOOLEQUAL       reduce using rule 29 (expression -> NAME .)
    COMA            reduce using rule 29 (expression -> NAME .)
    SEMI            reduce using rule 29 (expression -> NAME .)
    RPAREN          reduce using rule 29 (expression -> NAME .)


state 23

    (4) statement -> NAME EQUALS expression .
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . INF expression
    (19) expression -> expression . SUP expression
    (20) expression -> expression . INFEQUAL expression
    (21) expression -> expression . SUPEQUAL expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . BOOLEQUAL expression
    (26) expression -> expression . COMA expression

    SEMI            reduce using rule 4 (statement -> NAME EQUALS expression .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INF             shift and go to state 40
    SUP             shift and go to state 41
    INFEQUAL        shift and go to state 42
    SUPEQUAL        shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    BOOLEQUAL       shift and go to state 46
    COMA            shift and go to state 47


state 24

    (25) expression -> MINUS . expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 48

state 25

    (27) expression -> LPAREN . expression RPAREN
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22

    expression                     shift and go to state 49

state 26

    (28) expression -> NUMBER .

    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    TIMES           reduce using rule 28 (expression -> NUMBER .)
    DIVIDE          reduce using rule 28 (expression -> NUMBER .)
    INF             reduce using rule 28 (expression -> NUMBER .)
    SUP             reduce using rule 28 (expression -> NUMBER .)
    INFEQUAL        reduce using rule 28 (expression -> NUMBER .)
    SUPEQUAL        reduce using rule 28 (expression -> NUMBER .)
    AND             reduce using rule 28 (expression -> NUMBER .)
    OR              reduce using rule 28 (expression -> NUMBER .)
    BOOLEQUAL       reduce using rule 28 (expression -> NUMBER .)
    COMA            reduce using rule 28 (expression -> NUMBER .)
    SEMI            reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)


state 27

    (12) statement -> NAME LPAREN RPAREN .

    SEMI            reduce using rule 12 (statement -> NAME LPAREN RPAREN .)


state 28

    (13) statement -> NAME LPAREN expression . RPAREN
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . INF expression
    (19) expression -> expression . SUP expression
    (20) expression -> expression . INFEQUAL expression
    (21) expression -> expression . SUPEQUAL expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . BOOLEQUAL expression
    (26) expression -> expression . COMA expression

    RPAREN          shift and go to state 50
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INF             shift and go to state 40
    SUP             shift and go to state 41
    INFEQUAL        shift and go to state 42
    SUPEQUAL        shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    BOOLEQUAL       shift and go to state 46
    COMA            shift and go to state 47


state 29

    (5) statement -> PRINT LPAREN expression . RPAREN
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . INF expression
    (19) expression -> expression . SUP expression
    (20) expression -> expression . INFEQUAL expression
    (21) expression -> expression . SUPEQUAL expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . BOOLEQUAL expression
    (26) expression -> expression . COMA expression

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INF             shift and go to state 40
    SUP             shift and go to state 41
    INFEQUAL        shift and go to state 42
    SUPEQUAL        shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    BOOLEQUAL       shift and go to state 46
    COMA            shift and go to state 47


state 30

    (6) statement -> PRINTSTR LPAREN strings . RPAREN

    RPAREN          shift and go to state 52


state 31

    (34) strings -> NAME . strings
    (35) strings -> NAME .
    (34) strings -> . NAME strings
    (35) strings -> . NAME

    RPAREN          reduce using rule 35 (strings -> NAME .)
    NAME            shift and go to state 31

    strings                        shift and go to state 53

state 32

    (7) statement -> IF LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . INF expression
    (19) expression -> expression . SUP expression
    (20) expression -> expression . INFEQUAL expression
    (21) expression -> expression . SUPEQUAL expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . BOOLEQUAL expression
    (26) expression -> expression . COMA expression

    RPAREN          shift and go to state 54
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INF             shift and go to state 40
    SUP             shift and go to state 41
    INFEQUAL        shift and go to state 42
    SUPEQUAL        shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    BOOLEQUAL       shift and go to state 46
    COMA            shift and go to state 47


state 33

    (8) statement -> WHILE LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . INF expression
    (19) expression -> expression . SUP expression
    (20) expression -> expression . INFEQUAL expression
    (21) expression -> expression . SUPEQUAL expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . BOOLEQUAL expression
    (26) expression -> expression . COMA expression

    RPAREN          shift and go to state 55
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INF             shift and go to state 40
    SUP             shift and go to state 41
    INFEQUAL        shift and go to state 42
    SUPEQUAL        shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    BOOLEQUAL       shift and go to state 46
    COMA            shift and go to state 47


state 34

    (9) statement -> FOR LPAREN NAME . EQUALS expression SEMI expression SEMI NAME EQUALS expression RPAREN LACCOLADE bloc RACCOLADE

    EQUALS          shift and go to state 56


state 35

    (10) statement -> FUNC NAME LPAREN . RPAREN LACCOLADE bloc RACCOLADE
    (11) statement -> FUNC NAME LPAREN . param RPAREN LACCOLADE bloc RACCOLADE
    (30) param -> . NAME COMA param
    (31) param -> . NAME EQUALS expression COMA param
    (32) param -> . NAME EQUALS expression
    (33) param -> . NAME

    RPAREN          shift and go to state 58
    NAME            shift and go to state 57

    param                          shift and go to state 59

state 36

    (14) expression -> expression PLUS . expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression INF expression
    (19) expression -> . expression SUP expression
    (20) expression -> . expression INFEQUAL expression
    (21) expression -> . expression SUPEQUAL expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression BOOLEQUAL expression
    (25) expression -> . MINUS expression
    (26) expression -> . expression COMA expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . NAME

    MINUS           shift and go to state 24
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    NAME            shift and go to state 22
